# feed-pipeline

./: .env.example  .gitignore  README.md  TUNING_RECOMMENDATIONS.md  pyproject.toml
.github/workflows/: backfill.yml  discover.yml  keepalive.yml  radar.yml  remind.yml  test.yml
config/: companies.example.yaml  companies.yaml  profile.example.yaml  profile.yaml
data/: seed_ai_devtools.csv  seed_extra.csv  seed_tech.csv  seed_workday_canada.csv  seed_workflow.csv
docs/: README.md  TUNING_RECOMMENDATIONS.md
scripts/: canada_seed.csv  mine_lists.py  probe_canada.py  probe_candidates.py  smoke.py  startups_seed.csv  test_ping.py
src/job_radar/: __main__.py  bot.py  config.py  dedup.py  discover.py  filters.py  models.py  notify.py  pipeline.py  remind.py  scorer.py  seed.py  sheet.py  sources.py  tracker.py  urgency.py  validate.py
src/job_radar/adapters/: amazonjobs.py  ashby.py  (+9 more)
tests/: __init__.py  test_adapters_amazonjobs.py  test_adapters_ashby.py  test_adapters_googlecareers.py  test_adapters_greenhouse.py  test_adapters_lever.py  test_adapters_oracle.py  test_adapters_simplify.py  test_adapters_smartrecruiters.py  test_adapters_workable.py  test_adapters_workday.py  test_base.py  test_cli.py  test_config.py  test_dedup.py  test_discover.py  test_filters.py  test_models.py  test_notify.py  test_pipeline.py  test_remind.py  test_scorer.py  test_seed.py  test_sheet.py  test_sources.py  test_tracker.py  test_urgency.py  test_validate.py
tests/fixtures/: ashby_jobs.json  greenhouse_jobs.json  lever_postings.json  smartrecruiters_jobs.json  workday_jobs.json
(+4 files in other folders)
