[project]
name = "job-radar"
version = "0.1.0"
description = "Polls ATS job boards and pings Discord about relevant postings"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
sheet = ["gspread>=6.0", "google-auth>=2.0"]   # cron path: mirror matches to a Google Sheet
bot = ["discord.py>=2.4", "gspread>=6.0", "google-auth>=2.0", "python-dotenv>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
